#1 [test] redux 적용 테스트 완료

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -37,7 +37,8 @@
       "@controllers/*": ["src/controllers/*"],
       "@components/*": ["src/components/*"],
       "@styles/*": ["src/styles/*"],
-      "@assets/*": ["src/assets/*"]
+      "@assets/*": ["src/assets/*"],
+      "@stores/*": ["src/stores/*"]
     }
   },
   "include": ["src", "vite.config.ts"]
