--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 VITE_BASE_URL=https://usememoteam.site
+REACT_APP_KAKAO_JS_SDK_KEY=d10b0cd4c2e6580ccd7a53be459ccddf
+VITE_KAKAO_JS_SDK_KEY=d10b0cd4c2e6580ccd7a53be459ccddf
+VITE_KAKAO_REDIRECT_URI=http://localhost:5174/oauth/callback/kakao
