[feat] 회원가입 진행 중

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 VITE_BASE_URL=https://usememoteam.site
 REACT_APP_KAKAO_JS_SDK_KEY=d10b0cd4c2e6580ccd7a53be459ccddf
 VITE_KAKAO_JS_SDK_KEY=d10b0cd4c2e6580ccd7a53be459ccddf
-VITE_KAKAO_REDIRECT_URI=http://localhost:5174/oauth/callback/kakao
+VITE_KAKAO_REDIRECT_URI=http://localhost:5174/login/oauth/callback/kakao
+VITE_REST_API_KEY=94dcc0573e8ca7c386286d153c5f8649
