#77 [add] prettier import order 라이브러리 추가

--- a/.prettierrc
+++ b/.prettierrc
@@ -6,5 +6,26 @@
   "tabWidth": 2,
   "trailingComma": "all",
   "printWidth": 120,
-  "arrowParens": "always"
+  "arrowParens": "always",
+
+  "importOrder": [
+    "^@ts/(.*)$",
+    "^@base/(.*)$",
+    "^@utils/(.*)$",
+    "^@hooks/(.*)$",
+    "^@pages/(.*)$",
+    "^@router/(.*)$",
+    "^@layout/(.*)$",
+    "^@common/(.*)$",
+    "^@recoils/(.*)$",
+    "^@constants/(.*)$",
+    "^@components/(.*)$",
+    "^@controllers/(.*)$",
+    "^@styles/(.*)$",
+    "^@assets/(.*)$",
+    "^[./]"
+  ],
+  "importOrderSeparation": false,
+  "importOrderSortSpecifiers": true,
+  "plugins": ["@trivago/prettier-plugin-sort-imports"]
 }
