#54 [feat] 로컬 API 연결

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_BASE_URL=https://usememoteam.site
+VITE_BASE_URL=https://jjungmindev.site
 VITE_REST_API_KEY=94dcc0573e8ca7c386286d153c5f8649
 VITE_KAKAO_JS_SDK_KEY=1b21414aead1553188da0e9c3d7bccf9
-VITE_KAKAO_REDIRECT_URI=http://localhost:5174/login/oauth/callback/kakao
+VITE_KAKAO_REDIRECT_URI=http://localhost:5173/login/oauth/callback/kakao
