--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,3 @@
+VITE_BASE_URL=https://usememoteam.site
 VITE_KAKAO_REDIRECT_URI=https://jugger.netlify.app/login/oauth/callback/kakao
 KAKAO_CLIENT_ID=94dcc0573e8ca7c386286d153c5f8649
