--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,57 +1,80 @@
-name: Deploy React to GitHub Pages
+# name: Deploy React to GitHub Pages
+
+# on:
+#   push:
+#     branches:
+#       - main  # 또는 배포용 브랜치
+
+# permissions:
+#   contents: read
+#   pages: write
+#   id-token: write
+
+# concurrency:
+#   group: 'pages'
+#   cancel-in-progress: false
+
+# jobs:
+#   deploy:
+#     environment:
+#       name: github-pages
+#       url: ${{ steps.deployment.outputs.page_url }}
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout source
+#         uses: actions/checkout@v4
+
+#       - name: Setup Node.js
+#         uses: actions/setup-node@v3
+#         with:
+#           node-version: 24.3.0  # 사용 중인 Node 버전에 맞게 조절
+#           cache: 'npm'
+
+#       - name: Install dependencies
+#         run: npm install
+
+#       - name: Build project
+#         run: npm run build
+
+#       - name: Setup Pages
+#         uses: actions/configure-pages@v5
+
+#       - name: Upload artifact
+#         uses: actions/upload-pages-artifact@v3
+#         with:
+#           path: './dist'
+#       # - name: Set Git identity
+#       #   run: |
+#       #     git config --global user.email "jadest13x03@gmail.com"
+#       #     git config --global user.name "Jadest13"
+
+#       - name: Deploy to GitHub Pages
+#         id: deployment
+#         uses: actions/deploy-pages@v4
+#       # - name: Deploy to GitHub Pages
+#       #   run: npm run deploy
+#       #   env:
+#       #     GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+name: Deploy via gh-pages
 
 on:
   push:
-    branches:
-      - main  # 또는 배포용 브랜치
-
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-  
-concurrency:
-  group: 'pages'
-  cancel-in-progress: false
+    branches: [main]
 
 jobs:
   deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout source
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          node-version: 24.3.0  # 사용 중인 Node 버전에 맞게 조절
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Build project
-        run: npm run build
-
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
-
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: './dist'
-      # - name: Set Git identity
-      #   run: |
-      #     git config --global user.email "jadest13x03@gmail.com"
-      #     git config --global user.name "Jadest13"
-
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
-      # - name: Deploy to GitHub Pages
-      #   run: npm run deploy
-      #   env:
-      #     GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          node-version: 18
+      - run: npm ci
+      - run: npm run build
+      - run: |
+          git config --global user.email "actions@github.com"
+          git config --global user.name "GitHub Actions"
+          npm run deploy
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
