--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -73,8 +73,8 @@ jobs:
       - run: npm ci
       - run: npm run build
       - run: |
-          git config --global user.email "actions@github.com"
-          git config --global user.name "GitHub Actions"
+          git config --global user.email "jadest13x03@gmail.com"
+          git config --global user.name "Jadest13"
           npm run deploy
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
