--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "homepage": "jugger.usememo.site",
+  "repository": {
+    "type": "git",
+    "url": "https://${GH_TOKEN}@github.com/Team-useMemo/Jugger-Frontend-Web.git"
+  }
   "scripts": {
     "dev": "vite --host",
     "build": "tsc -b && vite build",
