--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,27 +56,57 @@
 #       #   env:
 #       #     GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+# name: Deploy via gh-pages
+
+# on:
+#   push:
+#     branches: [main]
+
+# jobs:
+#   deploy:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v3
+#       - uses: actions/setup-node@v3
+#         with:
+#           node-version: 18
+#       - run: npm ci
+#       - run: npm run build
+#       - run: echo "//github.com/:_authToken=${GH_TOKEN}" > ~/.npmrc
+#       - run: |
+#           git config --global user.email "jadest13x03@gmail.com"
+#           git config --global user.name "Jadest13"
+#           git remote set-url origin https://x-access-token:${GH_TOKEN}@github.com/Team-useMemo/Jugger-Frontend-Web.git
+#           npm run deploy
+#         env:
+#           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+
 name: Deploy via gh-pages
 
 on:
   push:
     branches: [main]
 
+permissions:
+  contents: write  # ✅ 꼭 추가해야 함! github-actions가 push할 수 있도록
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v3
+
       - uses: actions/setup-node@v3
         with:
           node-version: 18
+
       - run: npm ci
       - run: npm run build
-      - run: echo "//github.com/:_authToken=${GH_TOKEN}" > ~/.npmrc
-      - run: |
-          git config --global user.email "jadest13x03@gmail.com"
-          git config --global user.name "Jadest13"
-          git remote set-url origin https://x-access-token:${GH_TOKEN}@github.com/Team-useMemo/Jugger-Frontend-Web.git
-          npm run deploy
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
