--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -101,7 +101,8 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 18
-
+          
+      - run: rm -rf dist
       - run: npm ci
       - run: npm run build
 
