--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -124,3 +124,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
+          cname: jugger.usememo.site
