--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -115,15 +115,18 @@ jobs:
 
       - name: test2
         run: ls -al
+        
+      - name: Create .env.production
+        run: |
+          cat <<EOF > .env.production
+          VITE_BASE_URL=${{ secrets.VITE_BASE_URL }}
+          VITE_KAKAO_REST_API_KEY=${{ secrets.VITE_KAKAO_REST_API_KEY }}
+          VITE_KAKAO_JS_SDK_KEY=${{ secrets.VITE_KAKAO_JS_SDK_KEY }}
+          VITE_GOOGLE_CLIENT_ID=${{ secrets.VITE_GOOGLE_CLIENT_ID }}
+          VITE_GOOGLE_REDIRECT_URI=${{ secrets.VITE_GOOGLE_REDIRECT_URI }}
+          EOF
 
       - name: Build
-        env:
-          VITE_BASE_URL: ${{ secrets.VITE_BASE_URL }}
-          VITE_KAKAO_REST_API_KEY: ${{ secrets.VITE_KAKAO_REST_API_KEY }}
-          VITE_KAKAO_JS_SDK_KEY: ${{ secrets.VITE_KAKAO_JS_SDK_KEY }}
-          VITE_GOOGLE_CLIENT_ID: ${{ secrets.VITE_GOOGLE_CLIENT_ID }}
-          VITE_GOOGLE_REDIRECT_URI: ${{ secrets.VITE_GOOGLE_REDIRECT_URI }}
-
         run: npm run build
 
       - name: Deploy to GitHub Pages
