--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -115,7 +115,7 @@ jobs:
 
       - name: test2
         run: ls -al
-        
+
       - name: Create .env.production
         run: |
           cat <<EOF > .env.production
@@ -123,8 +123,7 @@ jobs:
           VITE_KAKAO_REST_API_KEY=${{ secrets.VITE_KAKAO_REST_API_KEY }}
           VITE_KAKAO_JS_SDK_KEY=${{ secrets.VITE_KAKAO_JS_SDK_KEY }}
           VITE_GOOGLE_CLIENT_ID=${{ secrets.VITE_GOOGLE_CLIENT_ID }}
-          VITE_GOOGLE_REDIRECT_URI=${{ secrets.VITE_GOOGLE_REDIRECT_URI }}
-          EOF
+          VITE_NAVER_REST_API_KEY=${{ secrets.VITE_NAVER_REST_API_KEY }}
 
       - name: Build
         run: npm run build
