--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -127,7 +127,10 @@ jobs:
 
       - name: Build
         run: npm run build
-
+        
+      - name: SPA fallback (GitHub Pages 404 → index.html)
+        run: cp dist/index.html dist/404.html
+        
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
