--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
 VITE_BASE_URL=https://jjungmindev.site
 VITE_KAKAO_REST_API_KEY=94dcc0573e8ca7c386286d153c5f8649
 VITE_KAKAO_JS_SDK_KEY=1b21414aead1553188da0e9c3d7bccf9
-VITE_KAKAO_REDIRECT_URI=http://localhost:5173/login/oauth/callback/kakao
 VITE_GOOGLE_CLIENT_ID=1051025332849-1m9nd84mrmfflk0jdulkt8m091220tqk.apps.googleusercontent.com
-VITE_GOOGLE_REDIRECT_URI=http://localhost:5173/login/oauth/callback/google
+VITE_NAVER_REST_API_KEY=4QxoM0fD10iGhLJb7XyC
